kubernetes/apps/gameserver-enshrouded/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: enshrouded
spec:
  replicas: 1
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn-rc-2
      resources:
        requests:
          storage: 15Gi
  template:
    spec:
      containers:
      - name: enshourded
        image: mornedhels/enshrouded-server:stable-proton
        ports:
        - containerPort: 15637
          name: queryport
        resources:
          requests:
            cpu: "2000m"
            memory: "4Gi"
          limits:
            cpu: "4000m"
            memory: "6Gi"
