kubernetes/apps/gameserver-enshrouded/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-enshrouded
spec:
  type: LoadBalancer
  ports:
    - name: queryport
      port: 15637
      protocol: UDP
