kubernetes/apps/gameserver-enshrouded/base/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-enshrouded
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to: #allow-internet-only
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
  - to: #Allow DNS
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "kube-system"
    - podSelector:
        matchLabels:
          k8s-app: "kube-dns"
  - to: #Allow Local UDP range
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - protocol: UDP
      port: 49152
      endPort: 65535
